--- a/indexMosh.html
+++ b/indexMosh.html
@@ -8,6 +8,6 @@
 
 <body>
   <h1>Hello World</h1> 
-  <script src="IndexMosh.js"></script>
+  <script src="Assignment 26.js"></script>
 </body>
 </html>
