--- a/imageslider.html
+++ b/imageslider.html
@@ -3,14 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=, initial-scale=1.0">
+    <link rel="stylesheet" href="imageslider.css">
     <title>Nara's Assignment</title>
 </head>
 <body>
     <h1>Image Slider</h1>
-    <div class="nara's-slider">
-        <img id="image-one" src="" alt="">
-        <img id="image-two" src="" alt="">
-        <img id="image-three" src="" alt="">
+    <div class="nara-slider">
+        <img id="image-one" class="item active" src="mda-logo-1.png" alt="">
+        <img id="image-two" class="item" src="eCitizen-hero-banner-1.jpg" alt="">
+        <img id="image-three" class="item " src="agency-directorate-of-immigration-services.png" alt="">
     </div>
+    <button id="next">Next</button>
+    <button id="prev">Prev</button>
+    <script src="imageslider.js"></script>
 </body>
 </html>
